--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <h2 class="section__title about__title">Education</h2>
                         <p class="about__description">I am a dedicated bachelor student of Software Engineering at Haramaya University, specializing in front-end development. Passionate about creating intuitive user experiences.
                         </p>
-                        <a href="assets\AbdiDebelaResume.pdf" download="Abdi_Debela.pdf" class="download-link">
+                        <a href="assets\AbdiDebelaResume (2).pdf" download="Abdi_Debela.pdf" class="download-link">
                             Download CV <span class="arrow">&#9660;</span>
                     </div>
 
